--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,9 @@ p,
 input,
 textarea,
 label,
-span {
-	font-family: "HelveticaNeue-Light", serif;
+span,
+input {
+	font-family: 'Quicksand', sans-serif;
 	vertical-align: middle;
 }
 
@@ -25,7 +26,7 @@ body{
 .contact-page form textarea {
 	display: block;
 	width: 100%;
-	margin: 12px 0 25px 0;
+	margin: 8px 0 25px 0;
 	border: 2px solid rgba(225,225,225,0.5);
 	border-radius: 5px;
 	color: #434343;
@@ -38,6 +39,7 @@ body{
 .contact-page form input[type="submit"]{
 	width: 100%;
 	height: 50px;
+	font-size: 1em;
 	background-color: rgba(225,225,225,0.5);
 	border: none;
 	border-radius: 10px;
@@ -56,13 +58,12 @@ body{
 	border-radius: 5px;
 	display: inline;
 	text-align: center;
-	letter-spacing: 1px;
+	font-size: 0.85em;
 	position: relative;
 	background: #FFA9AD;
 	width: 160px;
 	padding: 5px 10px;
 	color: #fff;
-	font-size: 0.9em;
 	left: 15px;
 }
 
