--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ body{
 	border: 2px solid rgba(225,225,225,0.5);
 	border-radius: 5px;
 	color: #434343;
+	font-size: 0.9em;
 }
 
 .contact-page form button{
